@@ -46,6 +46,9 @@ Release 1.3.0 - unreleased
     MAPREDUCE-5217. Fix DistCP to work when launched by Oozie on a secure
     cluster. (Venkat Ranganathan via sseth)
 
+    HADOOP-8981. TestMetricsSystemImpl fails on Windows. (Xuan Gong, backported
+    by Chris Nauroth via suresh)
+
 Release 1.2.1 - Unreleased 
 
   INCOMPATIBLE CHANGES
